# blazar

./: .gitignore  .rustfmt.toml  .tarpaulin.toml  AGENTS.md  Cargo.toml  bacon.toml  clippy.toml  cobertura.xml  deny.toml  justfile  tarpaulin-report.json
.cargo/: audit.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: benchmark-evals.yml  ci.yml
config/: BLAZAR.md  app.json  provider copy.json  system_prompt.md  theme.json
docs/development/: runtime-tui-diagrams.md  tooling.md
docs/knowledge-base/: 2026-04-18-ratatui-codex-guide.md  blazar-coding-standards.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: tui-debug.sh
scripts/eval/: open_benchmark_runner.py
scripts/observability/: install-tools.sh  logs-errors.sh  logs-tail.sh  logs-turn.sh
src/: app.rs  app_tests.rs  config.rs  lib.rs  main.rs
src/agent/: acp_discovery.rs  mod.rs  protocol.rs  runtime.rs  state.rs
src/chat/: app.rs  demo.rs  effects.rs  event_loop.rs  git.rs  input.rs  launcher.rs  launcher_view.rs  mod.rs  model.rs  picker.rs  root.rs  runtime_port.rs  session.rs  theme.rs  users_state.rs  view.rs  workspace.rs  workspace_catalog.rs
src/observability/: debug.rs  logging.rs  logging_tests.rs  mod.rs
src/provider/: echo.rs  mod.rs  openai_compat.rs  openai_compat_helpers.rs  openrouter.rs  siliconflow.rs
src/welcome/: mascot.rs  mod.rs  sprite.rs  startup.rs  state.rs  theme.rs  view.rs
tests/: agent_acp_runtime_integration.rs  agent_runtime.rs  agent_runtime_impl.inc  agent_state.rs  agent_tool_loop.rs  agent_tools_bash.rs  agent_tools_fs.rs  agent_tools_inventory.rs  agent_tools_registry.rs  app_config.rs  assets_layout.rs  chat_boot.rs  chat_command_matching.rs  chat_command_orchestrator.rs  chat_command_registry.rs  chat_demo.rs  chat_event_loop.rs  chat_git.rs  chat_git_loader.rs  chat_git_view.rs  chat_input.rs  chat_input_props.rs  chat_launcher.rs  chat_launcher_view.rs  chat_model.rs  chat_plan_plugin.rs  chat_render.rs  chat_render_snapshot.rs  chat_runtime.rs  chat_session.rs  chat_session_loader.rs  chat_session_view.rs  chat_theme_config.rs  chat_tool_timeline.rs  chat_workspace.rs  chat_workspace_catalog.rs  observability_scripts.rs  provider_openai_tools.rs  provider_siliconflow_tools.rs  render_registry.rs  (+7 more)
tests/common/: http_test_server.rs
tests/eval/: test_open_benchmark_runner.py
tests/snapshots/: chat_render_snapshot__picker_overlay.snap  (+3 more)
(+184 files in other folders)
