[package]
name = "blazar"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.29"
image = "0.25"
ratatui-core = "0.1"
ratatui-macros = "0.7"
ratatui-widgets = "0.3"
ratatui-crossterm = "0.1"
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
tui-markdown = "0.3"
rusqlite = "0.31"
serde_json = "1"
unicode-width = "0.2"
opaline = "0.4"
tui-overlay = "0.1"
tui-widget-list = "0.15"

[dev-dependencies]
insta = "1"
proptest = "1"
