[package]
name = "blazar"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.29"
image = "0.25"
ratatui-core = "0.1"
ratatui-macros = "0.7"
ratatui-widgets = "0.3"
ratatui-crossterm = "0.1"
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
opaline = "0.4"
tui-overlay = "0.1"
tui-widget-list = "0.15"
ureq = { version = "2", features = ["json"] }
ratskin = "0.3.1"
log = "0.4.29"
flexi_logger = "0.31.8"
termimad = "0.34.1"
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
insta = "1"
proptest = "1"
